# AndroidVulkanDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  settings.gradle  vcpkg.json
Android/: settings.gradle.kts
Android/VulkanAndroidRenderer/: build.gradle.kts
Android/VulkanAndroidRenderer/src/androidTest/java/com/example/vulkanandroidrenderer/: ExampleInstrumentedTest.kt
Android/VulkanAndroidRenderer/src/main/cpp/: CMakeLists.txt  vulkanandroidrenderer.cpp
Android/VulkanAndroidRenderer/src/main/java/com/example/vulkanandroidrenderer/: NativeLib.kt
Android/VulkanAndroidRenderer/src/test/java/com/example/vulkanandroidrenderer/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Assets/: CMakeLists.txt
Docs/: notes.md
Renderer/: CMakeLists.txt
Renderer/Include/StRenderer/: Camera.hpp  Renderer.hpp
Renderer/Source/: CMakeLists.txt
Renderer/Source/StMath/: CMakeLists.txt
Renderer/Source/StRenderer/: CMakeLists.txt  Renderer.cpp
Renderer/Source/StShader/: CMakeLists.txt  Shader.cpp
Samples/: CMakeLists.txt
Samples/Desktop/: main.cpp
app/: build.gradle
app/src/androidTest/java/com/st/androidvulkandemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakePresets.json  Notes.md  Renderer.cpp  Renderer.hpp  main.cpp  native-lib.cpp  vcpkg.json
app/src/main/cpp/Component/: Component.cpp  Component.hpp
app/src/main/cpp/Math/: CMakeLists.txt
app/src/main/cpp/Math/Include/Math/: Math.hpp
app/src/main/cpp/StMath/: CMakeLists.txt
app/src/main/java/com/st/androidvulkandemo/: MainActivity.kt
app/src/main/java/com/st/androidvulkandemo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/st/androidvulkandemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
